Added Simple Controller with Unit Test Case

--- a/EGrocer-API/Source/EGrocer.Tests/EGrocer.Tests.csproj
+++ b/EGrocer-API/Source/EGrocer.Tests/EGrocer.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EGrocer.API\EGrocer.API.csproj" />
+  </ItemGroup>
+
 </Project>
