--- a/EGrocer-API/Source/EGrocer.API/appsettings.json
+++ b/EGrocer-API/Source/EGrocer.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "GrocerConnection_Local": "Data Source = (localdb)\\mssqllocaldb; Initial Catalog = EGrocer; Integrated Security = True;"
+  },
   "AllowedHosts": "*"
 }
