Securing Web API with Azure AD Authentication

--- a/EGrocer-API/Source/EGrocer.API/appsettings.json
+++ b/EGrocer-API/Source/EGrocer.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "AzureAd": {
+    "ClientId": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxx",
+    "Instance": "https://login.microsoftonline.com",
+    "TenantId": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxx"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
